# bike-model-detection

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
frontend/: package-lock.json
frontend/src/: App.tsx
